# Ultralisk

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test.yml
.pi-subagents/artifacts/: 08a7a56a_worker_0_input.md  08a7a56a_worker_0_meta.json  08a7a56a_worker_0_output.md  08a7a56a_worker_0_transcript.jsonl  0b6ad710_worker_0_input.md  0b6ad710_worker_0_meta.json  0b6ad710_worker_0_output.md  0b6ad710_worker_0_transcript.jsonl  1146bf36_worker_0_input.md  1146bf36_worker_0_meta.json  1146bf36_worker_0_output.md  1146bf36_worker_0_transcript.jsonl  1d2e70c8_worker_0_input.md  1d2e70c8_worker_0_meta.json  1d2e70c8_worker_0_output.md  1d2e70c8_worker_0_transcript.jsonl  2a667c7a_worker_0_input.md  2a667c7a_worker_0_meta.json  2a667c7a_worker_0_output.md  2a667c7a_worker_0_transcript.jsonl  2c6b4150_worker_0_input.md  2c6b4150_worker_0_meta.json  2c6b4150_worker_0_output.md  2c6b4150_worker_0_transcript.jsonl  2dad79f4_worker_0_input.md  2dad79f4_worker_0_meta.json  2dad79f4_worker_0_output.md  2dad79f4_worker_0_transcript.jsonl  3c62d8e2_reviewer_0_input.md  3c62d8e2_reviewer_0_meta.json  3c62d8e2_reviewer_0_output.md  3c62d8e2_reviewer_0_transcript.jsonl  46fb8fd1_worker_0_input.md  46fb8fd1_worker_0_meta.json  46fb8fd1_worker_0_output.md  46fb8fd1_worker_0_transcript.jsonl  47f22c11_worker_0_input.md  47f22c11_worker_0_meta.json  47f22c11_worker_0_output.md  47f22c11_worker_0_transcript.jsonl  (+107 more)
app/: __init__.py  config.py  logging_config.py  main.py  metrics.py  tracing.py
app/api/: __init__.py  service.py
app/inference/: __init__.py  base.py  mock.py  openai_compat.py
app/quota/: __init__.py  service.py  sql_store.py
app/safety/: __init__.py  adapters.py  base.py  model_guard.py  pipeline.py  rules.py  streaming.py
auth-service/: Cargo.toml
auth-service/migrations/: 001_init.sql  002_totp.sql
auth-service/src/: app.rs  config.rs  error.rs  main.rs  revocation.rs  types.rs
auth-service/src/auth/: api_key.rs  jwt.rs  mod.rs  password.rs  totp.rs
auth-service/src/db/: api_keys.rs  mod.rs  orgs.rs  users.rs
auth-service/src/handlers/: keys.rs  login.rs  me.rs  mod.rs  refresh.rs  revocation_version.rs  totp.rs  validate_key.rs
console/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
console/brand/: README.md
console/console-api/: package.json  tsconfig.json  vitest.config.ts
console/console-ui/: eslint.config.js  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
console/scripts/: dev-clean.sh  dev-start.sh  dev-stop.sh  dev.sh
docs/: ENGINEERING_ROADMAP.md  ai-data-center-systems.md  architecture.md  log-schema.md  prd-console-api.md  prd-console.md  roadmap.md  tech-stack.md  together-ai-analysis-technical.md  together-ai-analysis.md  together-chamber-combined-analysis.md  tokencamp-ultralisk-synergy-analysis.md  ultralisk-architecture-research.md  ultralisk-concept-analysis.md  ultralisk-prd.md  usechamber-io-analysis.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs/adr/: 000-platform-object-model.md  001-platform-architecture.md  (+9 more)
gateway/: Cargo.toml  README.md
gateway/config/: route_table.json
gateway/config/crd/: route-table-entry.yaml
gateway/kong/: kong.yml
gateway/src/: app.rs  batch.rs  cold_start.rs  config.rs  error.rs  health.rs  health_checker.rs  lib.rs  main.rs  passive_checker.rs  rate_limit.rs  revocation.rs  shutdown.rs  types.rs
gateway/src/extract/: chat_request.rs  mod.rs
gateway/src/middleware/: auth.rs  mod.rs  observe.rs
gateway/src/proxy/: admin.rs  chat.rs  mod.rs  usage_writer.rs
gateway/src/route/: kube_watcher.rs  mod.rs  resolver.rs  table.rs  watcher.rs
gateway/tests/: auth.rs  common.rs  e2e_admin.rs  e2e_chat.rs  health_checker_e2e.rs  rate_limit.rs  route.rs
scripts/: dev-restart.sh  dev-start.sh
sql/: monthly_usage.sql
tests/: conftest.py  test_chain.py  test_model_safety.py  test_quota.py  test_quota_sql.py  test_safety.py  test_streaming.py  test_tracing.py  test_vllm_adapter.py
website/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
zealot/: Cargo.toml  README.md  build.rs  pyproject.toml
zealot/.cargo/: config.toml
zealot/docs/: architecture.md
zealot/src/: block_manager.rs  engine.rs  error.rs  lib.rs  model_runner_cuda.rs  model_runner_py.rs  sampling.rs  scheduler.rs  tokenizer.rs
zealot/src/attention/: cuda.rs  mod.rs
zealot/src/constrained_decode/: matcher.rs  mod.rs  schema.rs
zealot/tests/: backend_e2e.rs  cpu_infer_e2e.rs
zealot/tests/common/: mod.rs
(+277 files in other folders)
