[project]
name = "ultralisk"
version = "0.1.0"
description = "Production-grade LLM API gateway — pluggable auth, rate limiting, content safety, observability, and tracing"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q", "--tb=short"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests/"]
