[package]
name = "ultralisk-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
arc-swap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
once_cell = "1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
async-stream = "0.3"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
base64 = "0.22"

[dev-dependencies]
axum-test = "16"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }
wiremock = "0.6"
tempfile = "3"
