[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "zealot"
version = "0.1.0"
requires-python = ">=3.10"
description = "Ultralisk Inference Engine — Rust-accelerated components for vLLM"

[tool.maturin]
module-name = "zealot_engine"
features = ["pyo3/extension-module"]
